--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "hyper-material",
-  "version": "0.1.0",
-  "description": "A material theme for Hyper.app",
+  "name": "hyper-jane",
+  "version": "0.0.1",
+  "description": "Theme for Hyper.app",
   "repository" : {
     "type" : "git",
-    "url" : "https://github.com/dotcypress/hyper-material"
+    "url" : "https://github.com/dotcypress/hyper-jane"
   },
   "main": "index.js",
   "keywords": [
-    "hyperterm",
-    "hyper",
     "hyper.app",
-    "material"
+    "theme"
   ],
   "author": "Vitaly Domnikov <dotcypress@gmail.com>",
   "license": "MIT"
